--- a/Application-Code/backend/mongodb-statefulset.yaml
+++ b/Application-Code/backend/mongodb-statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: mongodb
-          image: ritesh57/mongo
+          image: ritesh57/mongo:latest
           ports:
             - containerPort: 27017
           volumeMounts:
