--- a/ArgoCD/backend/templates/deployment.yaml
+++ b/ArgoCD/backend/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          env:
+            {{- toYaml .Values.env | nindent 8 }}       
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
@@ -76,3 +78,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      
