--- a/Application-Code/frontend/jenkins-values.yaml
+++ b/Application-Code/frontend/jenkins-values.yaml
@@ -8,10 +8,10 @@ controller:
   resources:
     requests:
       cpu: "500m"
-      memory: "1Gi"
+      memory: "512Mi"
     limits:
       cpu: "1"
-      memory: "2Gi"
+      memory: "1Gi"
 
   installPlugins:
     - kubernetes
