--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.terraform
+# Terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+.terraform.lock.hcl
+
+# Terraform plan files
+*.tfplan
