--- a/ArgoCD/ingress.yaml
+++ b/ArgoCD/ingress.yaml
@@ -2,8 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todo-ingress
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/healthcheck-path: /ready
 spec:
-  ingressClassName: nginx
+  ingressClassName: alb
   rules:
     - host: todo.local
       http:
@@ -22,3 +26,4 @@ spec:
                 name: frontend
                 port:
                   number: 80
+
