--- a/ArgoCD/ingress.yaml
+++ b/ArgoCD/ingress.yaml
@@ -2,15 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: todo-ingress
+  namespace: dev
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/healthcheck-path: /ready
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
 spec:
   ingressClassName: alb
   rules:
-    - host: todo.local
-      http:
+    - http:
         paths:
           - path: /api
             pathType: Prefix
@@ -26,4 +27,3 @@ spec:
                 name: frontend
                 port:
                   number: 80
-
