--- a/Application-Code/frontend/Jenkinsfile
+++ b/Application-Code/frontend/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
 
   agent {
     kubernetes {
+      inheritFrom ''
       yaml """
 apiVersion: v1
 kind: Pod
@@ -53,6 +54,9 @@ spec:
   }
 
   stages {
+
+    echo "USING NEW JENKINSFILE VERSION 2"
+
 
     stage('Checkout') {
       steps {
