--- a/Application-Code/frontend/Jenkinsfile
+++ b/Application-Code/frontend/Jenkinsfile
@@ -26,7 +26,7 @@ spec:
 
     - name: kaniko
       image: gcr.io/kaniko-project/executor:latest
-      command: ["/busybox/cat"]
+      command: ["cat"]
       tty: true
       volumeMounts:
         - name: kaniko-secret
