--- a/Application-Code/frontend/Jenkinsfile
+++ b/Application-Code/frontend/Jenkinsfile
@@ -25,8 +25,9 @@ spec:
       tty: true
 
     - name: kaniko
-      image: gcr.io/kaniko-project/executor:latest
-      command: ["cat"]
+      image: gcr.io/kaniko-project/executor:debug
+      command:
+        - /busybox/cat
       tty: true
       volumeMounts:
         - name: kaniko-secret
