--- a/Application-Code/backend/Dockerfile
+++ b/Application-Code/backend/Dockerfile
@@ -1,17 +1,35 @@
-FROM node:18 AS builder
+# ---------- Dependencies Stage ----------
+FROM node:18-alpine AS deps
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install --only=production
+USER root
 
+# Install dependencies first (layer caching)
+COPY package*.json ./
+RUN npm ci --only=production
+
+# Copy source code
 COPY . .
 
+# Fix permissions
+RUN chown -R node:node /app
+
+USER node
+
+
+# ---------- Runtime Stage ----------
 FROM node:18-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app ./
+# Create non-root user explicitly (safer)
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Copy from deps stage
+COPY --from=deps --chown=appuser:appgroup /app /app
+
+USER appuser
 
 EXPOSE 5000
 
